--- a/cv.html
+++ b/cv.html
@@ -19,28 +19,28 @@
     <section>
       <img src="assets/images/foto.jpg" alt="Foto Saya" width="150">
       <h2>Christian Hutahaean</h2>
-      <p>Mahasiswa Informatika yang tertarik pada pengembangan web, pemrograman Java, dan keamanan informasi.</p>
+      <p>Mahasiswa Informatika yang tertarik pada CyberSecurity</p>
     </section>
 
     <section>
       <h3>Kontak</h3>
-      <p>Email: <a href="mailto:christian@example.com">christian@example.com</a></p>
+      <p>Email: <a href="mailto:christian@example.com">christian@.com</a></p>
       <p>WhatsApp: <a href="https://wa.me/6281234567890">+62 812-3456-7890</a></p>
     </section>
 
     <section>
       <h3>Pendidikan</h3>
       <ul>
-        <li>SMA Negeri 1 Jakarta (2019 - 2022)</li>
-        <li>S1 Informatika, Universitas XYZ (2022 - sekarang)</li>
+        <li>SMA Negeri 1 Amerika (2020 - 2023)</li>
+        <li>S1 Informatika, Universitas XYZ (2023 - sekarang)</li>
       </ul>
     </section>
 
     <section>
       <h3>Pengalaman</h3>
       <ul>
-        <li>Magang Web Developer di PT Teknologi (2024)</li>
-        <li>Asisten Praktikum Pemrograman Web (2025)</li>
+        <li>Mahasiswa IT DEl</li>
+     
       </ul>
     </section>
 
@@ -57,7 +57,7 @@
       <h3>Sertifikat</h3>
       <ul>
         <li>Dicoding — Belajar Dasar Pemrograman Web (2024)</li>
-        <li>Oracle Academy — Java Programming (2025)</li>
+      
       </ul>
     </section>
 
