--- a/nilai.html
+++ b/nilai.html
@@ -34,7 +34,7 @@
         <tr>
           <td>1</td>
           <td>231001</td>
-          <td>Andi</td>
+          <td>Elkana</td>
           <td>80</td>
           <td>75</td>
           <td>85</td>
@@ -44,7 +44,7 @@
         <tr>
           <td>2</td>
           <td>231002</td>
-          <td>Budi</td>
+          <td>Glen</td>
           <td>70</td>
           <td>65</td>
           <td>60</td>
@@ -54,7 +54,7 @@
         <tr>
           <td>3</td>
           <td>231003</td>
-          <td>Citra</td>
+          <td>Paul</td>
           <td>90</td>
           <td>85</td>
           <td>88</td>
@@ -64,7 +64,7 @@
         <tr>
           <td>4</td>
           <td>231004</td>
-          <td>Doni</td>
+          <td>Marshall</td>
           <td>60</td>
           <td>55</td>
           <td>65</td>
