--- a/cv.html
+++ b/cv.html
@@ -17,7 +17,7 @@
 
   <main>
     <section>
-      <img src="assets/images/foto.jpg" alt="Foto Saya" width="150">
+       <img src="assets/images/postku.jpg" alt="Cover Post 2" width="300">
       <h2>Christian Hutahaean</h2>
       <p>Mahasiswa Informatika yang tertarik pada CyberSecurity</p>
     </section>
