--- a/cv.html
+++ b/cv.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
+<!-- Ini memberitahu browser kalau kita pakai HTML5 -->
+
 <html lang="id">
+<!-- Halaman HTML ini pakai bahasa Indonesia -->
+
 <head>
+  <!-- Bagian kepala halaman, isinya pengaturan -->
   <meta charset="UTF-8">
+  <!-- Supaya tulisan bisa tampil semua huruf dengan benar -->
   <title>Curriculum Vitae</title>
+  <!-- Judul halaman yang akan muncul di tab browser -->
 </head>
+
 <body>
+  <!-- Semua isi halaman akan ditampilkan di dalam <body> -->
+
   <header>
+    <!-- Bagian atas halaman (kepala halaman) -->
     <h1>Curriculum Vitae</h1>
+    <!-- Judul besar halaman -->
+
     <nav>
+      <!-- Menu untuk pindah ke halaman lain -->
       <a href="index.html">Blog</a> |
       <a href="register.html">Form Pendaftaran</a> |
       <a href="nilai.html">Tabel Nilai</a> |
@@ -16,56 +30,74 @@
   </header>
 
   <main>
+    <!-- Bagian utama isi halaman -->
+
     <section>
-       <img src="assets/images/postku.jpg" alt="Cover Post 2" width="300">
+      <!-- Bagian data diri -->
+      <img src="assets/images/postku.jpg" alt="Cover Post 2" width="300">
+      <!-- Foto profil -->
       <h2>Christian Hutahaean</h2>
+      <!-- Nama -->
       <p>Mahasiswa Informatika yang tertarik pada CyberSecurity</p>
+      <!-- Deskripsi singkat tentang diri -->
     </section>
 
     <section>
+      <!-- Bagian kontak -->
       <h3>Kontak</h3>
       <p>Email: <a href="mailto:christian@example.com">christian@.com</a></p>
+      <!-- Alamat email -->
       <p>WhatsApp: <a href="https://wa.me/6281234567890">+62 812-3456-7890</a></p>
+      <!-- Nomor WhatsApp -->
     </section>
 
     <section>
+      <!-- Bagian pendidikan -->
       <h3>Pendidikan</h3>
       <ul>
         <li>SMA Negeri 1 Amerika (2020 - 2023)</li>
         <li>S1 Informatika, Universitas XYZ (2023 - sekarang)</li>
       </ul>
+      <!-- Daftar sekolah dan kuliah -->
     </section>
 
     <section>
+      <!-- Bagian pengalaman -->
       <h3>Pengalaman</h3>
       <ul>
         <li>Mahasiswa IT DEl</li>
-     
       </ul>
+      <!-- Daftar pengalaman -->
     </section>
 
     <section>
+      <!-- Bagian keahlian -->
       <h3>Keahlian</h3>
       <ul>
         <li>HTML, CSS, JavaScript</li>
         <li>Java (OOP, Spring Boot)</li>
         <li>Database MySQL</li>
       </ul>
+      <!-- Daftar kemampuan yang dimiliki -->
     </section>
 
     <section>
+      <!-- Bagian sertifikat -->
       <h3>Sertifikat</h3>
       <ul>
         <li>Dicoding — Belajar Dasar Pemrograman Web (2024)</li>
-      
       </ul>
+      <!-- Sertifikat yang pernah didapat -->
     </section>
 
     <section>
+      <!-- Bagian portfolio -->
       <h3>Portfolio</h3>
       <ul>
         <li><a href="index.html">Blog Website</a></li>
+        <!-- Link ke proyek blog -->
         <li><a href="https://github.com/username/project" target="_blank">Project GitHub</a></li>
+        <!-- Link ke proyek di GitHub -->
       </ul>
     </section>
   </main>
