--- a/nilai.html
+++ b/nilai.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
+<!-- Ini bilang ke browser kalau kita pakai HTML5 -->
+
 <html lang="id">
+<!-- Halaman HTML ini pakai bahasa Indonesia -->
+
 <head>
+  <!-- Bagian kepala (tidak kelihatan di halaman, hanya pengaturan) -->
   <meta charset="UTF-8">
+  <!-- Supaya teks bisa menampilkan huruf dengan benar -->
   <title>Tabel Perolehan Nilai</title>
+  <!-- Judul halaman yang muncul di tab browser -->
 </head>
+
 <body>
+  <!-- Semua isi halaman ada di dalam <body> -->
+
   <header>
+    <!-- Bagian kepala halaman -->
     <h1>Tabel Perolehan Nilai</h1>
+    <!-- Judul besar halaman -->
     <nav>
+      <!-- Menu untuk pindah ke halaman lain -->
       <a href="index.html">Blog</a> |
       <a href="register.html">Form Pendaftaran</a> |
       <a href="nilai.html">Tabel Nilai</a> |
@@ -16,10 +29,16 @@
   </header>
 
   <main>
+    <!-- Isi utama halaman -->
+
     <table border="1" cellpadding="5" cellspacing="0">
+      <!-- Bikin tabel, ada garis (border=1), ada jarak dalam sel (cellpadding), dan tidak ada jarak antar sel (cellspacing=0) -->
       <caption>Daftar Nilai Mahasiswa</caption>
+      <!-- Judul tabel -->
       <thead>
+        <!-- Bagian kepala tabel -->
         <tr>
+          <!-- Satu baris di tabel -->
           <th>No</th>
           <th>NIM</th>
           <th>Nama</th>
@@ -28,10 +47,13 @@
           <th>UAS</th>
           <th>Nilai Akhir</th>
           <th>Keterangan</th>
+          <!-- <th> artinya judul kolom -->
         </tr>
       </thead>
       <tbody>
+        <!-- Bagian isi tabel -->
         <tr>
+          <!-- Satu baris data -->
           <td>1</td>
           <td>231001</td>
           <td>Elkana</td>
@@ -40,6 +62,7 @@
           <td>85</td>
           <td>80</td>
           <td>Lulus</td>
+          <!-- <td> artinya isi kolom -->
         </tr>
         <tr>
           <td>2</td>
