--- a/register.html
+++ b/register.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
+<!-- Ini bilang ke browser kalau kita pakai HTML5 -->
+
 <html lang="id">
+<!-- Halaman HTML ini pakai bahasa Indonesia -->
+
 <head>
+  <!-- Bagian kepala, isinya pengaturan halaman -->
   <meta charset="UTF-8">
+  <!-- Supaya tulisan bisa ditampilkan dengan benar -->
   <title>Form Pendaftaran</title>
+  <!-- Judul halaman yang muncul di tab browser -->
 </head>
+
 <body>
+  <!-- Semua isi halaman ada di sini -->
+
   <header>
+    <!-- Bagian atas halaman -->
     <h1>Form Pendaftaran</h1>
+    <!-- Judul halaman -->
+
     <nav>
+      <!-- Menu untuk pindah ke halaman lain -->
       <a href="index.html">Blog</a> |
       <a href="register.html">Form Pendaftaran</a> |
       <a href="nilai.html">Tabel Nilai</a> |
@@ -16,38 +30,60 @@
   </header>
 
   <main>
+    <!-- Isi utama halaman -->
+
     <form action="#" method="post">
+      <!-- Formulir untuk mengisi data, method POST artinya data dikirim ke server -->
+
       <label for="nama">Nama Lengkap:</label><br>
+      <!-- Tulisan label untuk kotak nama -->
       <input type="text" id="nama" name="nama" required><br><br>
+      <!-- Kotak untuk isi nama lengkap, wajib diisi (required) -->
 
       <p>Jenis Kelamin:</p>
+      <!-- Teks untuk pilihan jenis kelamin -->
       <input type="radio" id="laki" name="gender" value="Laki-laki" required>
       <label for="laki">Laki-laki</label><br>
+      <!-- Tombol bulat untuk pilih laki-laki -->
       <input type="radio" id="perempuan" name="gender" value="Perempuan">
       <label for="perempuan">Perempuan</label><br><br>
+      <!-- Tombol bulat untuk pilih perempuan -->
 
       <label for="tempat">Tempat Lahir:</label><br>
+      <!-- Label untuk tempat lahir -->
       <input type="text" id="tempat" name="tempat" required><br><br>
+      <!-- Kotak untuk isi tempat lahir -->
 
       <label for="tanggal">Tanggal Lahir:</label><br>
+      <!-- Label untuk tanggal lahir -->
       <input type="date" id="tanggal" name="tanggal" required><br><br>
+      <!-- Kotak kalender untuk pilih tanggal lahir -->
 
       <p>Hobi:</p>
+      <!-- Judul untuk bagian hobi -->
       <input type="checkbox" id="membaca" name="hobi" value="Membaca">
       <label for="membaca">Membaca</label><br>
+      <!-- Kotak centang untuk pilih hobi membaca -->
       <input type="checkbox" id="olahraga" name="hobi" value="Olahraga">
       <label for="olahraga">Olahraga</label><br>
+      <!-- Kotak centang untuk pilih hobi olahraga -->
       <input type="checkbox" id="musik" name="hobi" value="Musik">
       <label for="musik">Musik</label><br><br>
+      <!-- Kotak centang untuk pilih hobi musik -->
 
       <label for="password">Password:</label><br>
+      <!-- Label untuk password -->
       <input type="password" id="password" name="password" required><br><br>
+      <!-- Kotak isi password, hurufnya jadi bintang/tertutup -->
 
       <input type="checkbox" id="persetujuan" name="persetujuan" required>
       <label for="persetujuan">Saya setuju dengan syarat dan ketentuan</label><br><br>
+      <!-- Kotak centang untuk persetujuan, wajib dicentang -->
 
       <button type="reset">Reset</button>
+      <!-- Tombol untuk menghapus semua isi form -->
       <button type="submit">Submit</button>
+      <!-- Tombol untuk mengirim data form -->
     </form>
   </main>
 </body>
