--- a/nilai.html
+++ b/nilai.html
@@ -1,101 +1,460 @@
 <!DOCTYPE html>
-<!-- Ini bilang ke browser kalau kita pakai HTML5 -->
-
 <html lang="id">
-<!-- Halaman HTML ini pakai bahasa Indonesia -->
 
 <head>
-  <!-- Bagian kepala (tidak kelihatan di halaman, hanya pengaturan) -->
   <meta charset="UTF-8">
-  <!-- Supaya teks bisa menampilkan huruf dengan benar -->
-  <title>Tabel Perolehan Nilai</title>
-  <!-- Judul halaman yang muncul di tab browser -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tabel Perolehan Nilai Mahasiswa</title>
+  <style>
+    /* Menambahkan CSS dasar untuk tabel agar mirip dengan gambar. */
+    body {
+      font-family: sans-serif;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      text-align: center;
+      vertical-align: middle;
+    }
+    thead th {
+      background-color: #e0e0e0;
+      color: #333;
+    }
+    th.green-bg {
+      background-color: #c6e0b4;
+    }
+    td.green-bg {
+      background-color: #e2f0d9;
+    }
+    th.blue-bg {
+      background-color: #c6d9f1;
+    }
+    td.blue-bg {
+      background-color: #e6f0f8;
+    }
+    th.orange-bg {
+      background-color: #fce4d6;
+    }
+    td.orange-bg {
+      background-color: #fef0e9;
+    }
+    th.purple-bg {
+      background-color: #e4d7f5;
+    }
+    td.purple-bg {
+      background-color: #f1eafb;
+    }
+    .text-left {
+      text-align: left;
+    }
+  </style>
 </head>
 
 <body>
-  <!-- Semua isi halaman ada di dalam <body> -->
 
   <header>
-    <!-- Bagian kepala halaman -->
     <h1>Tabel Perolehan Nilai</h1>
-    <!-- Judul besar halaman -->
     <nav>
-      <!-- Menu untuk pindah ke halaman lain -->
       <a href="index.html">Blog</a> |
       <a href="register.html">Form Pendaftaran</a> |
-      <a href="nilai.html">Tabel Nilai</a> |
-      <a href="cv.html">CV</a>
+      <a href="nilai.html" aria-current="page">Tabel Nilai</a> |
+      <a href="cv.html">Curriculum Vitae</a>
     </nav>
   </header>
 
   <main>
-    <!-- Isi utama halaman -->
-
-    <table border="1" cellpadding="5" cellspacing="0">
-      <!-- Bikin tabel, ada garis (border=1), ada jarak dalam sel (cellpadding), dan tidak ada jarak antar sel (cellspacing=0) -->
+    <table>
       <caption>Daftar Nilai Mahasiswa</caption>
-      <!-- Judul tabel -->
       <thead>
-        <!-- Bagian kepala tabel -->
         <tr>
-          <!-- Satu baris di tabel -->
-          <th>No</th>
-          <th>NIM</th>
-          <th>Nama</th>
-          <th>Tugas</th>
-          <th>UTS</th>
-          <th>UAS</th>
-          <th>Nilai Akhir</th>
-          <th>Keterangan</th>
-          <!-- <th> artinya judul kolom -->
+          <th rowspan="3">No</th>
+          <th rowspan="3">NIM</th>
+          <th rowspan="3" class="text-left">Nama</th>
+          <th rowspan="3">Program Studi</th>
+          <th rowspan="3">Kelas</th>
+          <th colspan="2" class="green-bg">Bentuk Komponen Bobot / Nilai Akhir</th>
+          <th colspan="3" class="blue-bg">Kuis</th>
+          <th colspan="5" class="orange-bg">Proyek</th>
+          <th colspan="3" class="purple-bg">Tugas</th>
+          <th colspan="3" class="green-bg">UAS</th>
+          <th colspan="3" class="purple-bg">UTS</th>
+          <th colspan="2" class="blue-bg">Bentuk Komponen Bobot / Nilai</th>
+          <th rowspan="3">Nilai Akhir</th>
+        </tr>
+        <tr>
+          <th colspan="2" class="green-bg">Bobot</th>
+          <th colspan="3" class="blue-bg">Bobot</th>
+          <th colspan="5" class="orange-bg">Bobot</th>
+          <th colspan="3" class="purple-bg">Bobot</th>
+          <th colspan="3" class="green-bg">Bobot</th>
+          <th colspan="3" class="purple-bg">Bobot</th>
+          <th colspan="2" class="blue-bg">Bobot</th>
+        </tr>
+        <tr>
+          <th class="green-bg">Nilai Akhir</th>
+          <th class="green-bg">Bobot</th>
+          <th class="blue-bg">K1-2</th>
+          <th class="blue-bg">K1-2</th>
+          <th class="blue-bg">Bobot</th>
+          <th class="orange-bg">P1-1</th>
+          <th class="orange-bg">P2-1</th>
+          <th class="orange-bg">P3-1</th>
+          <th class="orange-bg">Bobot</th>
+          <th class="orange-bg">Total</th>
+          <th class="purple-bg">T1-1</th>
+          <th class="purple-bg">T2-1</th>
+          <th class="purple-bg">Bobot</th>
+          <th class="green-bg">UAS1-1</th>
+          <th class="green-bg">UAS2-1</th>
+          <th class="green-bg">Bobot</th>
+          <th class="purple-bg">UTS1-1</th>
+          <th class="purple-bg">UTS2-2</th>
+          <th class="purple-bg">UTS3-3</th>
+          <th class="blue-bg">Total</th>
+          <th class="blue-bg">Bobot</th>
+          <th class="blue-bg">Nilai</th>
         </tr>
       </thead>
       <tbody>
-        <!-- Bagian isi tabel -->
         <tr>
-          <!-- Satu baris data -->
           <td>1</td>
-          <td>231001</td>
-          <td>Elkana</td>
-          <td>80</td>
-          <td>75</td>
-          <td>85</td>
-          <td>80</td>
-          <td>Lulus</td>
-          <!-- <td> artinya isi kolom -->
+          <td>1152400</td>
+          <td class="text-left">David Lodewick Simbolon</td>
+          <td>Sarjana</td>
+          <td>11F1</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td>0</td>
         </tr>
         <tr>
           <td>2</td>
-          <td>231002</td>
-          <td>Glen</td>
-          <td>70</td>
-          <td>65</td>
-          <td>60</td>
-          <td>65</td>
-          <td>Tidak Lulus</td>
+          <td>1152400</td>
+          <td class="text-left">Edwin Christoffel</td>
+          <td>Sarjana</td>
+          <td>11F1</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td>0</td>
         </tr>
         <tr>
           <td>3</td>
-          <td>231003</td>
-          <td>Paul</td>
-          <td>90</td>
-          <td>85</td>
-          <td>88</td>
-          <td>88</td>
-          <td>Lulus</td>
+          <td>1152400</td>
+          <td class="text-left">Astri Pitera Kalias</td>
+          <td>Sarjana</td>
+          <td>11F1</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td>0</td>
         </tr>
         <tr>
           <td>4</td>
-          <td>231004</td>
-          <td>Marshall</td>
-          <td>60</td>
-          <td>55</td>
-          <td>65</td>
-          <td>60</td>
-          <td>Tidak Lulus</td>
+          <td>1152400</td>
+          <td class="text-left">Gian Donovan</td>
+          <td>Sarjana</td>
+          <td>11F1</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>1152400</td>
+          <td class="text-left">Rouli Claudius Panggabean</td>
+          <td>Sarjana</td>
+          <td>11F1</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>1152400</td>
+          <td class="text-left">Martha Saulina Nabehan</td>
+          <td>Sarjana</td>
+          <td>11F1</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>1152400</td>
+          <td class="text-left">Miftahul Jannah Siregar</td>
+          <td>Sarjana</td>
+          <td>11F1</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <td>8</td>
+          <td>1152400</td>
+          <td class="text-left">Dea Maranata Siregar</td>
+          <td>Sarjana</td>
+          <td>11F1</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <td>9</td>
+          <td>1152400</td>
+          <td class="text-left">Sandrina Tiansa Sihite</td>
+          <td>Sarjana</td>
+          <td>11F1</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <td>10</td>
+          <td>1152400</td>
+          <td class="text-left">Dimas Rixkar Samuel</td>
+          <td>Sarjana</td>
+          <td>11F1</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td>0</td>
         </tr>
       </tbody>
+      <tfoot>
+        <tr>
+          <th colspan="5" class="text-left">Rata-rata</th>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="orange-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="green-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="purple-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td class="blue-bg">0</td>
+          <td>0</td>
+        </tr>
+      </tfoot>
     </table>
   </main>
+
+  <footer>
+    <p>&copy; 2025 Blog Saya. Hak Cipta Dilindungi.</p>
+  </footer>
+
 </body>
 </html>
