--- a/register.html
+++ b/register.html
@@ -1,90 +1,89 @@
 <!DOCTYPE html>
-<!-- Ini bilang ke browser kalau kita pakai HTML5 -->
-
 <html lang="id">
-<!-- Halaman HTML ini pakai bahasa Indonesia -->
 
 <head>
-  <!-- Bagian kepala, isinya pengaturan halaman -->
   <meta charset="UTF-8">
-  <!-- Supaya tulisan bisa ditampilkan dengan benar -->
-  <title>Form Pendaftaran</title>
-  <!-- Judul halaman yang muncul di tab browser -->
-</head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Form Pendaftaran Pengguna</title>
+  </head>
 
 <body>
-  <!-- Semua isi halaman ada di sini -->
 
   <header>
-    <!-- Bagian atas halaman -->
     <h1>Form Pendaftaran</h1>
-    <!-- Judul halaman -->
-
     <nav>
-      <!-- Menu untuk pindah ke halaman lain -->
       <a href="index.html">Blog</a> |
-      <a href="register.html">Form Pendaftaran</a> |
+      <a href="register.html" aria-current="page">Form Pendaftaran</a> |
       <a href="nilai.html">Tabel Nilai</a> |
-      <a href="cv.html">CV</a>
+      <a href="cv.html">Curriculum Vitae</a>
     </nav>
   </header>
 
   <main>
-    <!-- Isi utama halaman -->
+    <form action="#" method="post" novalidate>
+      <fieldset>
+        <legend>Informasi Pribadi</legend>
+        <p>
+          <label for="nama">Nama Lengkap:</label><br>
+          <input type="text" id="nama" name="nama" required placeholder="Masukkan nama lengkap Anda">
+          </p>
 
-    <form action="#" method="post">
-      <!-- Formulir untuk mengisi data, method POST artinya data dikirim ke server -->
+        <p>
+          Jenis Kelamin:
+          <br>
+          <input type="radio" id="laki" name="gender" value="Laki-laki" required>
+          <label for="laki">Laki-laki</label>
+          <input type="radio" id="perempuan" name="gender" value="Perempuan">
+          <label for="perempuan">Perempuan</label>
+        </p>
 
-      <label for="nama">Nama Lengkap:</label><br>
-      <!-- Tulisan label untuk kotak nama -->
-      <input type="text" id="nama" name="nama" required><br><br>
-      <!-- Kotak untuk isi nama lengkap, wajib diisi (required) -->
+        <p>
+          <label for="tempat-lahir">Tempat Lahir:</label><br>
+          <input type="text" id="tempat-lahir" name="tempat" required>
+        </p>
 
-      <p>Jenis Kelamin:</p>
-      <!-- Teks untuk pilihan jenis kelamin -->
-      <input type="radio" id="laki" name="gender" value="Laki-laki" required>
-      <label for="laki">Laki-laki</label><br>
-      <!-- Tombol bulat untuk pilih laki-laki -->
-      <input type="radio" id="perempuan" name="gender" value="Perempuan">
-      <label for="perempuan">Perempuan</label><br><br>
-      <!-- Tombol bulat untuk pilih perempuan -->
+        <p>
+          <label for="tanggal-lahir">Tanggal Lahir:</label><br>
+          <input type="date" id="tanggal-lahir" name="tanggal" required>
+        </p>
+      </fieldset>
 
-      <label for="tempat">Tempat Lahir:</label><br>
-      <!-- Label untuk tempat lahir -->
-      <input type="text" id="tempat" name="tempat" required><br><br>
-      <!-- Kotak untuk isi tempat lahir -->
+      <fieldset>
+        <legend>Hobi dan Preferensi</legend>
+        <p>Hobi:</p>
+        <input type="checkbox" id="hobi-membaca" name="hobi[]" value="Membaca">
+        <label for="hobi-membaca">Membaca</label><br>
 
-      <label for="tanggal">Tanggal Lahir:</label><br>
-      <!-- Label untuk tanggal lahir -->
-      <input type="date" id="tanggal" name="tanggal" required><br><br>
-      <!-- Kotak kalender untuk pilih tanggal lahir -->
+        <input type="checkbox" id="hobi-olahraga" name="hobi[]" value="Olahraga">
+        <label for="hobi-olahraga">Olahraga</label><br>
 
-      <p>Hobi:</p>
-      <!-- Judul untuk bagian hobi -->
-      <input type="checkbox" id="membaca" name="hobi" value="Membaca">
-      <label for="membaca">Membaca</label><br>
-      <!-- Kotak centang untuk pilih hobi membaca -->
-      <input type="checkbox" id="olahraga" name="hobi" value="Olahraga">
-      <label for="olahraga">Olahraga</label><br>
-      <!-- Kotak centang untuk pilih hobi olahraga -->
-      <input type="checkbox" id="musik" name="hobi" value="Musik">
-      <label for="musik">Musik</label><br><br>
-      <!-- Kotak centang untuk pilih hobi musik -->
+        <input type="checkbox" id="hobi-musik" name="hobi[]" value="Musik">
+        <label for="hobi-musik">Musik</label>
+      </fieldset>
 
-      <label for="password">Password:</label><br>
-      <!-- Label untuk password -->
-      <input type="password" id="password" name="password" required><br><br>
-      <!-- Kotak isi password, hurufnya jadi bintang/tertutup -->
+      <fieldset>
+        <legend>Informasi Akun</legend>
+        <p>
+          <label for="password">Password:</label><br>
+          <input type="password" id="password" name="password" required>
+        </p>
 
-      <input type="checkbox" id="persetujuan" name="persetujuan" required>
-      <label for="persetujuan">Saya setuju dengan syarat dan ketentuan</label><br><br>
-      <!-- Kotak centang untuk persetujuan, wajib dicentang -->
+        <p>
+          <input type="checkbox" id="persetujuan" name="persetujuan" required>
+          <label for="persetujuan">Saya setuju dengan <a href="#">syarat dan ketentuan</a></label>
+          </p>
+      </fieldset>
 
-      <button type="reset">Reset</button>
-      <!-- Tombol untuk menghapus semua isi form -->
-      <button type="submit">Submit</button>
-      <!-- Tombol untuk mengirim data form -->
+      <p>
+        <button type="reset">Reset Formulir</button>
+        <button type="submit">Daftar Sekarang</button>
+      </p>
     </form>
   </main>
+
+  <footer>
+    <p>&copy; 2025 Blog Saya. Hak Cipta Dilindungi.</p>
+  </footer>
+
 </body>
 </html>
