--- a/cv.html
+++ b/cv.html
@@ -4,79 +4,72 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Curriculum Vitae - Christian Hutahaean</title>
-  </head>
+  <title>Curriculum Vitae</title>
+</head>
 
 <body>
-
   <header>
     <h1>Curriculum Vitae</h1>
     <nav>
       <a href="index.html">Blog</a> |
       <a href="register.html">Form Pendaftaran</a> |
       <a href="nilai.html">Tabel Nilai</a> |
-      <a href="cv.html" aria-current="page">CV</a>
+      <a href="cv.html">CV</a>
     </nav>
   </header>
 
   <main>
     <section>
       <h2>Informasi Pribadi</h2>
-      <figure>
-        <img src="assets/images/christian.jpg" alt="Foto profil Christian Hutahaean" width="200" height="200">
-        </figure>
+      <img src="assets/images/postku.jpg" alt="Foto Christian Hutahaean" width="300">
       <h3>Christian Hutahaean</h3>
       <p>Mahasiswa Informatika yang tertarik pada CyberSecurity</p>
     </section>
 
     <section>
       <h2>Kontak</h2>
-      <p><strong>Email:</strong> <a href="mailto:christian@example.com">christian@example.com</a></p>
-      <p><strong>WhatsApp:</strong> <a href="https://wa.me/6281234567890" target="_blank" rel="noopener noreferrer">+62 812-3456-7890</a></p>
+      <p>Email: <a href="mailto:christian@example.com">christian@.com</a></p>
+      <p>WhatsApp: <a href="https://wa.me/6281234567890" target="_blank">081234567890</a></p>
       </section>
 
     <section>
       <h2>Pendidikan</h2>
       <ul>
-        <li><strong>SMA Negeri 1 Amerika</strong> (2020 - 2023)</li>
-        <li><strong>S1 Informatika, Universitas XYZ</strong> (2023 - sekarang)</li>
-        </ul>
+        <li>SMA Negeri 1 Amerika (2020 - 2023)</li>
+        <li>S1 Informatika, Universitas XYZ (2023 - sekarang)</li>
+      </ul>
     </section>
 
     <section>
       <h2>Pengalaman</h2>
       <ul>
-        <li><strong>Mahasiswa IT DEl</strong></li>
-        </ul>
+        <li>Mahasiswa IT DEl</li>
+      </ul>
     </section>
 
     <section>
-      <h2>Keahlian Teknis</h2>
+      <h2>Keahlian</h2>
       <ul>
-        <li><strong>Bahasa Pemrograman:</strong> HTML, CSS, JavaScript, Java (OOP, Spring Boot)</li>
-        <li><strong>Database:</strong> MySQL</li>
-        </ul>
+        <li>HTML, CSS, JavaScript</li>
+        <li>Java (OOP, Spring Boot)</li>
+        <li>Database MySQL</li>
+      </ul>
     </section>
 
     <section>
       <h2>Sertifikat</h2>
       <ul>
-        <li><strong>Dicoding</strong> — Belajar Dasar Pemrograman Web (2024)</li>
+        <li>Dicoding — Belajar Dasar Pemrograman Web (2024)</li>
       </ul>
     </section>
 
     <section>
-      <h2>Portofolio Proyek</h2>
+      <h2>Portfolio</h2>
       <ul>
-        <li><a href="index.html"><strong>Blog Website</strong></a></li>
-        <li><a href="https://github.com/username/project" target="_blank" rel="noopener noreferrer"><strong>Project GitHub</strong></a></li>
+        <li><a href="index.html">Blog Website</a></li>
+        <li><a href="https://github.com/username/project" target="_blank">Project GitHub</a></li>
       </ul>
     </section>
   </main>
-
-  <footer>
-    <p>&copy; 2025 Christian Hutahaean. Semua hak dilindungi.</p>
-    </footer>
-
 </body>
 </html>
