--- a/register.html
+++ b/register.html
@@ -4,86 +4,63 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Form Pendaftaran Pengguna</title>
-  </head>
+  <title>Form Pendaftaran</title>
+</head>
 
 <body>
-
   <header>
     <h1>Form Pendaftaran</h1>
     <nav>
       <a href="index.html">Blog</a> |
-      <a href="register.html" aria-current="page">Form Pendaftaran</a> |
+      <a href="register.html">Form Pendaftaran</a> |
       <a href="nilai.html">Tabel Nilai</a> |
-      <a href="cv.html">Curriculum Vitae</a>
+      <a href="cv.html">CV</a>
     </nav>
   </header>
 
   <main>
-    <form action="#" method="post" novalidate>
+    <form action="#" method="post">
       <fieldset>
         <legend>Informasi Pribadi</legend>
-        <p>
-          <label for="nama">Nama Lengkap:</label><br>
-          <input type="text" id="nama" name="nama" required placeholder="Masukkan nama lengkap Anda">
-          </p>
+        <label for="nama">Nama Lengkap:</label><br>
+        <input type="text" id="nama" name="nama" required><br><br>
 
-        <p>
-          Jenis Kelamin:
-          <br>
-          <input type="radio" id="laki" name="gender" value="Laki-laki" required>
-          <label for="laki">Laki-laki</label>
-          <input type="radio" id="perempuan" name="gender" value="Perempuan">
-          <label for="perempuan">Perempuan</label>
-        </p>
+        <p>Jenis Kelamin:</p>
+        <input type="radio" id="laki" name="gender" value="Laki-laki" required>
+        <label for="laki">Laki-laki</label><br>
+        <input type="radio" id="perempuan" name="gender" value="Perempuan">
+        <label for="perempuan">Perempuan</label><br><br>
 
-        <p>
-          <label for="tempat-lahir">Tempat Lahir:</label><br>
-          <input type="text" id="tempat-lahir" name="tempat" required>
-        </p>
+        <label for="tempat">Tempat Lahir:</label><br>
+        <input type="text" id="tempat" name="tempat" required><br><br>
 
-        <p>
-          <label for="tanggal-lahir">Tanggal Lahir:</label><br>
-          <input type="date" id="tanggal-lahir" name="tanggal" required>
-        </p>
+        <label for="tanggal">Tanggal Lahir:</label><br>
+        <input type="date" id="tanggal" name="tanggal" required><br><br>
       </fieldset>
 
       <fieldset>
         <legend>Hobi dan Preferensi</legend>
         <p>Hobi:</p>
-        <input type="checkbox" id="hobi-membaca" name="hobi[]" value="Membaca">
-        <label for="hobi-membaca">Membaca</label><br>
-
-        <input type="checkbox" id="hobi-olahraga" name="hobi[]" value="Olahraga">
-        <label for="hobi-olahraga">Olahraga</label><br>
-
-        <input type="checkbox" id="hobi-musik" name="hobi[]" value="Musik">
-        <label for="hobi-musik">Musik</label>
+        <input type="checkbox" id="membaca" name="hobi" value="Membaca">
+        <label for="membaca">Membaca</label><br>
+        <input type="checkbox" id="olahraga" name="hobi" value="Olahraga">
+        <label for="olahraga">Olahraga</label><br>
+        <input type="checkbox" id="musik" name="hobi" value="Musik">
+        <label for="musik">Musik</label><br><br>
       </fieldset>
 
       <fieldset>
-        <legend>Informasi Akun</legend>
-        <p>
-          <label for="password">Password:</label><br>
-          <input type="password" id="password" name="password" required>
-        </p>
-
-        <p>
-          <input type="checkbox" id="persetujuan" name="persetujuan" required>
-          <label for="persetujuan">Saya setuju dengan <a href="#">syarat dan ketentuan</a></label>
-          </p>
+        <legend>Detail Akun</legend>
+        <label for="password">Password:</label><br>
+        <input type="password" id="password" name="password" required><br><br>
       </fieldset>
 
-      <p>
-        <button type="reset">Reset Formulir</button>
-        <button type="submit">Daftar Sekarang</button>
-      </p>
+      <input type="checkbox" id="persetujuan" name="persetujuan" required>
+      <label for="persetujuan">Saya setuju dengan syarat dan ketentuan</label><br><br>
+
+      <button type="reset">Reset</button>
+      <button type="submit">Submit</button>
     </form>
   </main>
-
-  <footer>
-    <p>&copy; 2025 Blog Saya. Hak Cipta Dilindungi.</p>
-  </footer>
-
 </body>
 </html>
