--- a/nilai.html
+++ b/nilai.html
@@ -75,7 +75,7 @@
         <tr>
           <td>1</td>
           <td>1152400</td>
-          <td>David Lodewick Simbolon</td>
+          <td>Elkana Sitorus</td>
           <td>Sarjana</td>
           <td>11F1</td>
           <td>0</td>
@@ -105,7 +105,7 @@
         <tr>
           <td>2</td>
           <td>1152400</td>
-          <td>Edwin Christoffel</td>
+          <td>Paul Bornok Manurung</td>
           <td>Sarjana</td>
           <td>11F1</td>
           <td>0</td>
@@ -135,7 +135,7 @@
         <tr>
           <td>3</td>
           <td>1152400</td>
-          <td>Astri Pitera Kalias</td>
+          <td>Ruth Manurung</td>
           <td>Sarjana</td>
           <td>11F1</td>
           <td>0</td>
@@ -165,7 +165,7 @@
         <tr>
           <td>4</td>
           <td>1152400</td>
-          <td>Gian Donovan</td>
+          <td>Glen Sitorus</td>
           <td>Sarjana</td>
           <td>11F1</td>
           <td>0</td>
@@ -195,7 +195,7 @@
         <tr>
           <td>5</td>
           <td>1152400</td>
-          <td>Rouli Claudius Panggabean</td>
+          <td>Marshall Manurung</td>
           <td>Sarjana</td>
           <td>11F1</td>
           <td>0</td>
@@ -225,7 +225,7 @@
         <tr>
           <td>6</td>
           <td>1152400</td>
-          <td>Martha Saulina Nabehan</td>
+          <td>Sefa Situmeang</td>
           <td>Sarjana</td>
           <td>11F1</td>
           <td>0</td>
@@ -255,7 +255,7 @@
         <tr>
           <td>7</td>
           <td>1152400</td>
-          <td>Miftahul Jannah Siregar</td>
+          <td>Obenhard Pasaribu</td>
           <td>Sarjana</td>
           <td>11F1</td>
           <td>0</td>
@@ -285,7 +285,7 @@
         <tr>
           <td>8</td>
           <td>1152400</td>
-          <td>Dea Maranata Siregar</td>
+          <td>Lola Tampubolon</td>
           <td>Sarjana</td>
           <td>11F1</td>
           <td>0</td>
@@ -315,7 +315,7 @@
         <tr>
           <td>9</td>
           <td>1152400</td>
-          <td>Sandrina Tiansa Sihite</td>
+          <td>Firman Hutasoit</td>
           <td>Sarjana</td>
           <td>11F1</td>
           <td>0</td>
@@ -345,7 +345,7 @@
         <tr>
           <td>10</td>
           <td>1152400</td>
-          <td>Dimas Rixkar Samuel</td>
+          <td>Jelita Sibarani</td>
           <td>Sarjana</td>
           <td>11F1</td>
           <td>0</td>
