--- a/cv.html
+++ b/cv.html
@@ -4,72 +4,132 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Curriculum Vitae</title>
+  <title>Curriculum Vitae - Christian Hutahaean</title>
 </head>
 
 <body>
+
+  <!-- HEADER -->
   <header>
     <h1>Curriculum Vitae</h1>
     <nav>
-      <a href="index.html">Blog</a> |
-      <a href="register.html">Form Pendaftaran</a> |
-      <a href="nilai.html">Tabel Nilai</a> |
-      <a href="cv.html">CV</a>
+      <p>
+        <a href="index.html">🏠 Blog</a> |
+        <a href="register.html">📝 Form Pendaftaran</a> |
+        <a href="nilai.html">📊 Tabel Nilai</a> |
+        <a href="cv.html">💼 CV</a>
+      </p>
     </nav>
+    <hr>
   </header>
 
+  <!-- MAIN CV -->
   <main>
+
+    <!-- INFORMASI PRIBADI -->
     <section>
-      <h2>Informasi Pribadi</h2>
-      <img src="assets/images/postku.jpg" alt="Foto Christian Hutahaean" width="300">
-      <h3>Christian Hutahaean</h3>
-      <p>Mahasiswa Informatika yang tertarik pada CyberSecurity</p>
+      <h2>👤 Informasi Pribadi</h2>
+      <figure>
+        <img src="assets/images/postku.jpg" alt="Foto Christian Hutahaean" width="200">
+        <figcaption><strong>Christian Hutahaean</strong></figcaption>
+      </figure>
+      <p><em>Mahasiswa Informatika yang tertarik pada bidang CyberSecurity</em></p>
+      <hr>
     </section>
 
+    <!-- KONTAK -->
     <section>
-      <h2>Kontak</h2>
-      <p>Email: <a href="mailto:christian@example.com">christian@.com</a></p>
-      <p>WhatsApp: <a href="https://wa.me/6281234567890" target="_blank">081234567890</a></p>
-      </section>
-
-    <section>
-      <h2>Pendidikan</h2>
+      <h2>📬 Kontak</h2>
       <ul>
-        <li>SMA Negeri 1 Amerika (2020 - 2023)</li>
-        <li>S1 Informatika, Universitas XYZ (2023 - sekarang)</li>
+        <li>Email: <a href="mailto:christian@example.com">christian@example.com</a></li>
+        <li>WhatsApp: <a href="https://wa.me/6281234567890" target="_blank">081234567890</a></li>
+        <li>LinkedIn: <a href="https://linkedin.com/in/username" target="_blank">linkedin.com/in/username</a></li>
       </ul>
+      <hr>
     </section>
 
+    <!-- PENDIDIKAN -->
     <section>
-      <h2>Pengalaman</h2>
+      <h2>🎓 Pendidikan</h2>
+      <table border="1" cellpadding="5">
+        <thead>
+          <tr>
+            <th>Institusi</th>
+            <th>Program</th>
+            <th>Tahun</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>SMA Negeri 1 Amerika</td>
+            <td>IPA</td>
+            <td>2020 - 2023</td>
+          </tr>
+          <tr>
+            <td>Universitas XYZ</td>
+            <td>S1 Informatika</td>
+            <td>2023 - Sekarang</td>
+          </tr>
+        </tbody>
+      </table>
+      <hr>
+    </section>
+
+    <!-- PENGALAMAN -->
+    <section>
+      <h2>💼 Pengalaman</h2>
       <ul>
-        <li>Mahasiswa IT DEl</li>
+        <li>Mahasiswa IT Del — Belajar & riset CyberSecurity</li>
       </ul>
+      <hr>
     </section>
 
+    <!-- KEAHLIAN -->
     <section>
-      <h2>Keahlian</h2>
+      <h2>🛠️ Keahlian</h2>
       <ul>
-        <li>HTML, CSS, JavaScript</li>
-        <li>Java (OOP, Spring Boot)</li>
-        <li>Database MySQL</li>
+        <li>Web: HTML, CSS, JavaScript</li>
+        <li>Java: OOP, Spring Boot</li>
+        <li>Database: MySQL</li>
       </ul>
+      <hr>
     </section>
 
+    <!-- SERTIFIKAT -->
     <section>
-      <h2>Sertifikat</h2>
+      <h2>📑 Sertifikat</h2>
       <ul>
         <li>Dicoding — Belajar Dasar Pemrograman Web (2024)</li>
       </ul>
+      <hr>
     </section>
 
+    <!-- PORTFOLIO -->
     <section>
-      <h2>Portfolio</h2>
+      <h2>📂 Portfolio</h2>
       <ul>
         <li><a href="index.html">Blog Website</a></li>
         <li><a href="https://github.com/username/project" target="_blank">Project GitHub</a></li>
       </ul>
+      <hr>
     </section>
+
+    <!-- LAINNYA -->
+    <section>
+      <h2>📌 Info Tambahan</h2>
+      <details>
+        <summary>Klik untuk melihat</summary>
+        <p>Suka membaca buku tentang keamanan siber dan aktif di komunitas IT kampus.</p>
+      </details>
+    </section>
+
   </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <hr>
+    <p>&copy; 2025 Christian Hutahaean | Dibuat dengan ❤ hanya menggunakan HTML</p>
+  </footer>
+
 </body>
 </html>
