--- a/nilai.html
+++ b/nilai.html
@@ -11,10 +11,10 @@
   <header>
     <h1>Tabel Perolehan Nilai</h1>
     <nav>
-      <a href="index.html">Blog</a> |
-      <a href="register.html">Form Pendaftaran</a> |
-      <a href="nilai.html">Tabel Nilai</a> |
-      <a href="cv.html">CV</a>
+   <a href="index.html">🏠 Blog</a> |
+        <a href="register.html">📝 Form Pendaftaran</a> |
+        <a href="nilai.html">📊 Tabel Nilai</a> |
+        <a href="cv.html">💼 CV</a>
     </nav>
   </header>
 
