--- a/detail.html
+++ b/detail.html
@@ -10,9 +10,9 @@
     <h1>Detail Blog</h1>
     <nav>
       <a href="index.html">Ke Blog</a> |
-      <a href="register.html">Pendaftaran</a> |
-      <a href="nilai.html">Perolehan Nilai</a> |
-      <a href="cv.html">CV</a>
+     <a href="register.html">📝 Form Pendaftaran</a> |
+        <a href="nilai.html">📊 Tabel Perolehan Nilai</a> |
+        <a href="cv.html">💼 Curriculum Vitae</a>
     </nav>
     <hr>
   </header>
