--- a/nilai.html
+++ b/nilai.html
@@ -2,209 +2,213 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tabel Perolehan Nilai</title>
+  <title>Tabel Nilai Mahasiswa</title>
 </head>
 <body>
 
-  <h2 align="center">📊 Daftar Nilai Mahasiswa</h2>
+  <!-- HEADER -->
   <header>
-
-    <nav>
-      <p>
+    <h1 align="center">📊 Tabel Perolehan Nilai</h1>
+    <nav align="center">
       <a href="index.html">🏠 Blog</a> |
-        <a href="register.html">📝 Form Pendaftaran</a> |
-        <a href="nilai.html">📊 Tabel Nilai</a> |
-        <a href="cv.html">💼 CV</a>
-      </p>
+      <a href="register.html">📝 Form Pendaftaran</a> |
+      <a href="nilai.html">📊 Tabel Perolehan Nilai</a> |
+      <a href="cv.html">💼 CV</a>
     </nav>
     <hr>
   </header>
 
-  <table border="1" cellpadding="4" cellspacing="0" align="center">
-    <thead>
-      <tr align="center">
-        <th rowspan="2">No</th>
-        <th rowspan="2">NIM</th>
-        <th rowspan="2">Nama</th>
-        <th rowspan="2">Program Studi</th>
-        <th rowspan="2">Kelas</th>
-        <th colspan="2">Bentuk Komponen<br>Bobot / Nilai Akhir</th>
-        <th colspan="4">Kuis</th>
-        <th colspan="5">Proyek</th>
-        <th colspan="4">Tugas</th>
-        <th colspan="3">UAS</th>
-        <th colspan="4">UTS</th>
-        <th colspan="2">Bentuk Komponen<br>Bobot / Nilai</th>
-      </tr>
-      <tr align="center">
-        <th>Bobot</th>
-        <th>Nilai Akhir</th>
-        <th>K1-1</th>
-        <th>K1-2</th>
-        <th>Total</th>
-        <th>Bobot</th>
-        <th>P1-1</th>
-        <th>P2-1</th>
-        <th>P3-1</th>
-        <th>Total</th>
-        <th>Bobot</th>
-        <th>T1-1</th>
-        <th>T2-1</th>
-        <th>T3-1</th>
-        <th>Total</th>
-        <th>Bobot</th>
-        <th>UAS1-1</th>
-        <th>UAS2-1</th>
-        <th>Total</th>
-        <th>Bobot</th>
-        <th>UTS1-1</th>
-        <th>UTS2-1</th>
-        <th>UTS3-1</th>
-        <th>Total</th>
-        <th>Bobot</th>
-      </tr>
-    </thead>
+  <!-- TABEL -->
+  <table border="1" cellpadding="5" cellspacing="0">
+    <tr>
+      <th rowspan="2">No</th>
+      <th rowspan="2">NIM</th>
+      <th rowspan="2">Nama</th>
+      <th rowspan="2">Program Studi</th>
+      <th rowspan="2">Kelas</th>
+      <th colspan="2">Bentuk komponen<br>Bobot / Nilai Akhir</th>
+      <th colspan="4">Kuis</th>
+      <th colspan="5">Proyek</th>
+      <th colspan="5">Tugas</th>
+      <th colspan="3">UAS</th>
+      <th colspan="5">UTS</th>
+      <th colspan="2">Bentuk komponen<br>Bobot / Nilai</th>
+    </tr>
+    <tr>
+      <th></th>
+      <th></th>
+      <th>K1-1</th>
+      <th>K1-2</th>
+      <th>Total</th>
+      <th>Bobot</th>
+      <th>P2-1</th>
+      <th>P1-1</th>
+      <th>P3-1</th>
+      <th>Total</th>
+      <th>Bobot</th>
+      <th>T1-1</th>
+      <th>T2-1</th>
+      <th>T3-1</th>
+      <th>Total</th>
+      <th>Bobot</th>
+      <th>UAS1-1</th>
+      <th>UAS2-1</th>
+      <th>Total</th>
+      <th>Bobot</th>
+      <th>UTS1-1</th>
+      <th>UTS2-1</th>
+      <th>UTS2-2</th>
+      <th>UTS2-3</th>
+      <th>Total</th>
+      <th>Bobot</th>
+      <th></th>
+    </tr>
 
-    <tbody align="center">
-      <tr>
-        <td>1</td>
-        <td>11S2400</td>
-        <td>David Lodewick Simbolon</td>
-        <td>Sarjana</td>
-        <td>11F1</td>
-        <td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>11S2400</td>
-        <td>Edwin Christofel</td>
-        <td>Sarjana</td>
-        <td>11F1</td>
-        <td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>11S2400</td>
-        <td>Aditya Putera Kelat</td>
-        <td>Sarjana</td>
-        <td>11F1</td>
-        <td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-      </tr>
-      <tr>
-        <td>4</td>
-        <td>11S2400</td>
-        <td>Cain Donovan</td>
-        <td>Sarjana</td>
-        <td>11F1</td>
-        <td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-      </tr>
-      <tr>
-        <td>5</td>
-        <td>11S2400</td>
-        <td>Ruth Claudia Panggabean</td>
-        <td>Sarjana</td>
-        <td>11F1</td>
-        <td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-      </tr>
-      <tr>
-        <td>6</td>
-        <td>11S2400</td>
-        <td>Martha Saulina Nababan</td>
-        <td>Sarjana</td>
-        <td>11F1</td>
-        <td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-      </tr>
-      <tr>
-        <td>7</td>
-        <td>11S2400</td>
-        <td>Mei Marliana Siregar</td>
-        <td>Sarjana</td>
-        <td>11F1</td>
-        <td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-      </tr>
-      <tr>
-        <td>8</td>
-        <td>11S2400</td>
-        <td>Sandra Triana Sihite</td>
-        <td>Sarjana</td>
-        <td>11F1</td>
-        <td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-      </tr>
-      <tr>
-        <td>9</td>
-        <td>11S2400</td>
-        <td>Dea Mariana Siregar</td>
-        <td>Sarjana</td>
-        <td>11F1</td>
-        <td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-      </tr>
-      <tr>
-        <td>10</td>
-        <td>11S2401</td>
-        <td>Dimas Rezan Samuel</td>
-        <td>Sarjana</td>
-        <td>11F1</td>
-        <td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td>
-        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
-      </tr>
-    </tbody>
+    <!-- Data sesuai gambar (semua 10 mahasiswa) -->
+    <tr>
+      <td>1</td>
+      <td>11S2400</td>
+      <td>David Lodewick Simbolon</td>
+      <td>Sarjana</td>
+      <td>11IF1</td>
+      <td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>11S2400</td>
+      <td>Edwin Christoffel</td>
+      <td>Sarjana</td>
+      <td>11IF1</td>
+      <td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>11S2400</td>
+      <td>Aditya Putera Kelait</td>
+      <td>Sarjana</td>
+      <td>11IF1</td>
+      <td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>11S2400</td>
+      <td>Gain Donovan</td>
+      <td>Sarjana</td>
+      <td>11IF1</td>
+      <td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>11S2400</td>
+      <td>Rouli Claudia Panggabean</td>
+      <td>Sarjana</td>
+      <td>11IF1</td>
+      <td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td>
+    </tr>
+    <tr>
+      <td>6</td>
+      <td>11S2400</td>
+      <td>Martha Saulina Nababan</td>
+      <td>Sarjana</td>
+      <td>11IF1</td>
+      <td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td>
+    </tr>
+    <tr>
+      <td>7</td>
+      <td>11S2400</td>
+      <td>Miftahul Jannah Siregar</td>
+      <td>Sarjana</td>
+      <td>11IF1</td>
+      <td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td>
+    </tr>
+    <tr>
+      <td>8</td>
+      <td>11S2400</td>
+      <td>Dea Maranata Siregar</td>
+      <td>Sarjana</td>
+      <td>11IF1</td>
+      <td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td>
+    </tr>
+    <tr>
+      <td>9</td>
+      <td>11S2400</td>
+      <td>Sandrina Triana Sihite</td>
+      <td>Sarjana</td>
+      <td>11IF1</td>
+      <td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td>
+    </tr>
+    <tr>
+      <td>10</td>
+      <td>11S2401</td>
+      <td>Dimas Rexan Samuel</td>
+      <td>Sarjana</td>
+      <td>11IF1</td>
+      <td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td>
+    </tr>
 
-    <tfoot>
-      <tr align="center">
-        <th colspan="5">Rata-rata</th>
-        <td colspan="25">0</td>
-      </tr>
-    </tfoot>
+    <tr>
+      <td colspan="32" align="center"><b>Rata-Rata</b></td>
+    </tr>
   </table>
 
 </body>
